--- a/docs/faststore/components/molecules/table.mdx
+++ b/docs/faststore/components/molecules/table.mdx
@@ -430,7 +430,7 @@ All table-related components support all attributes also supported by their resp
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <OverviewSection>{UsageTableBordered}</OverviewSection>
+    <OverviewSection><UsageTableBordered/></OverviewSection>
   </Tab>
   <Tab>
     ```tsx
