--- a/docs/faststore/components/molecules/toggle-field.mdx
+++ b/docs/faststore/components/molecules/toggle-field.mdx
@@ -3,6 +3,8 @@ title: "Toggle Field"
 excerpt: ToggleField group a Toggle input and its corresponding Label.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/RadioLabel___b3fc3b7a139796e4921349df5aaa270c.png
+components:
+  - ToggleField.tsx
 ---
 
 Toggle Field wraps a [Toggle](https://developers.vtex.com/docs/guides/faststore/molecules-toggle) input and its corresponding [Label](https://developers.vtex.com/docs/guides/faststore/atoms-label).
