--- a/docs/faststore/components/molecules/carousel.mdx
+++ b/docs/faststore/components/molecules/carousel.mdx
@@ -5,9 +5,6 @@ sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/ProductCardComponent___e6502d57cf7e5bf247f86b64577d4141.png
 components:
   - Carousel.tsx
-  - ProductShelf.tsx
-  - ProductShelfItems.tsx
-  - ProductShelfItem.tsx
 ---
 
 Slides through multiple elements using custom controls.
@@ -406,30 +403,6 @@ For the mobile preview, please refresh the browser after resizing it.
     actionPath="/docs/guides/faststore/organisms-product-shelf"
     fullWidth
   >
-    <ProductShelf>
-      <ProductShelfItems>
-        {products.map(({ product }, idx) => (
-          <ProductShelfItem key={idx}>
-            <ProductCard>
-              <ProductCardImage>
-                <img
-                  data-fs-image
-                  src={product.image[0].url}
-                  alt={product.image[0].alternateName}
-                />
-              </ProductCardImage>
-              <ProductCardContent
-                title={product.isVariantOf.name}
-                price={{
-                  value: product.offers.offers[0].price,
-                  listPrice: product.offers.offers[0].listPrice,
-                  formatter: useFormattedPrice,
-                }}
-              />
-            </ProductCard>
-          </ProductShelfItem>
-        ))}
-      </ProductShelfItems>
-    </ProductShelf>
+    <ProductShelfUsage items={6}/>
   </SectionItem>
 </SectionList>
