--- a/docs/faststore/components/organisms/out-of-stock.mdx
+++ b/docs/faststore/components/organisms/out-of-stock.mdx
@@ -33,7 +33,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <OverviewSection containerStyle={{display: 'block'}}>
+    <OverviewSection>
       <OutOfStock
         title="Out of Stock"
         subtitle="Notify me when available"
