--- a/docs/faststore/components/molecules/dropdown.mdx
+++ b/docs/faststore/components/molecules/dropdown.mdx
@@ -293,73 +293,11 @@ This component inherits [Button](https://developers.vtex.com/docs/guides/faststo
 
 ### Keyboard Interactions
 
-<br />
-
-<Table>
-  <TableHead>
-    <TableRow>
-      <TableCell scope="col" variant="header" align="left">
-        Key
-      </TableCell>
-      <TableCell scope="col" variant="header" align="left">
-        Description
-      </TableCell>
-    </TableRow>
-  </TableHead>
-  <TableBody>
-    <TableRow>
-      <TableCell align="left">
-        <code>Enter</code>
-      </TableCell>
-      <TableCell align="left">
-        When focusing on <code>DropdownButton</code>, <br />
-        the Dropdown menu opens and focuses the first <code>DropdownItem</code>
-      </TableCell>
-    </TableRow>
-    <TableRow>
-      <TableCell align="left">
-        <code>ArrowDown</code>
-      </TableCell>
-      <TableCell align="left">
-        When focusing on an item, moves focus to the next{' '}
-        <code>DropdownItem</code>
-      </TableCell>
-    </TableRow>
-    <TableRow>
-      <TableCell align="left">
-        <code>ArrowUp</code>
-      </TableCell>
-      <TableCell align="left">
-        When focusing on an item, moves focus to the previous{' '}
-        <code>DropdownItem</code>
-      </TableCell>
-    </TableRow>
-    <TableRow>
-      <TableCell align="left">
-        <code>Escape</code>
-      </TableCell>
-      <TableCell align="left">
-        Closes <code>DropdownMenu</code> and moves focus to{' '}
-        <code>DropdownButton</code>
-      </TableCell>
-    </TableRow>
-    <TableRow>
-      <TableCell align="left">
-        <code>Home</code>
-      </TableCell>
-      <TableCell align="left">
-        When <code>DropdownMenu</code> is open, move focus to the first{' '}
-        <code>DropdownItem</code>
-      </TableCell>
-    </TableRow>
-    <TableRow>
-      <TableCell align="left">
-        <code>End</code>
-      </TableCell>
-      <TableCell align="left">
-        When <code>DropdownMenu</code> is open, move focus to the last{' '}
-        <code>DropdownItem</code>
-      </TableCell>
-    </TableRow>
-  </TableBody>
-</Table>
+| Key       | Description                                                                                     |
+|-----------|-------------------------------------------------------------------------------------------------|
+| `Enter`   | When focusing on `DropdownButton`, the Dropdown menu opens and focuses the first `DropdownItem`. |
+| `ArrowDown` | When focusing on an item, moves focus to the next `DropdownItem`.                                   |
+| `ArrowUp` | When focusing on an item, moves focus to the previous `DropdownItem`.                                 |
+| `Escape`  | Closes `DropdownMenu` and moves focus to `DropdownButton`.                                         |
+| `Home`    | When `DropdownMenu` is open, move focus to the first `DropdownItem`.                                |
+| `End`     | When `DropdownMenu` is open, move focus to the last `DropdownItem`.                                 |
