--- a/docs/faststore/components/molecules/icon-button.mdx
+++ b/docs/faststore/components/molecules/icon-button.mdx
@@ -3,6 +3,8 @@ title: "IconButton"
 excerpt: Icon Buttons are buttons that use icons instead of labels.
 sidebar_custom_props:
   image: https://vtexhelp.vtexassets.com/assets/docs/src/IconButton___a815b0a38dda52d079b3f73784c92c6b.png
+components:
+  - IconButton.tsx
 ---
 
 Icon Buttons are icons that trigger some sort of action, such as adding an item to the cart.
