--- a/docs/faststore/components/molecules/input-field.mdx
+++ b/docs/faststore/components/molecules/input-field.mdx
@@ -11,7 +11,7 @@ Input Field wraps an [Input](https://developers.vtex.com/docs/guides/faststore/a
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <OverviewSection direction="column">
+    <OverviewSection containerStyle={{ flexDirection="column", alignItems: "normal" }}>
       <InputField label="Label" id="inputfield-default" />
       <InputField
         label="Input w/ Error Message"
