--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -709,31 +709,7 @@ Use the `ProductCard` to:
 Displays a list of products to be used as a section on the store."
     actionPath="/docs/guides/faststore/organisms-product-shelf"
   >
-    <ProductShelf>
-      <ProductShelfItems>
-        {products.map(({ product }, idx) => (
-          <ProductShelfItem>
-            <ProductCard>
-              <ProductCardImage>
-                <img
-                  data-fs-image
-                  src={product.image[0].url}
-                  alt={product.image[0].alternateName}
-                />
-              </ProductCardImage>
-              <ProductCardContent
-                title={product.isVariantOf.name}
-                price={{
-                  value: product.offers.offers[0].price,
-                  listPrice: product.offers.offers[0].listPrice,
-                  formatter: useFormattedPrice,
-                }}
-              />
-            </ProductCard>
-          </ProductShelfItem>
-        ))}
-      </ProductShelfItems>
-    </ProductShelf>
+    <ProductShelfUsage items={6}/>
   </SectionItem>
   <SectionItem
     title="ProductGrid"
