--- a/docs/faststore/components/organisms/filter-slider.mdx
+++ b/docs/faststore/components/organisms/filter-slider.mdx
@@ -181,6 +181,10 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 <ComponentPropsSection component="FilterSlider" />
 
+<PropsSection propsList="FilterSlider" />
+
+<PropsSection propsList="FilterSliderProps" />
+
 ---
 
 ## Design Tokens
