fix: replace ProductGrid

--- a/docs/faststore/components/organisms/overview.mdx
+++ b/docs/faststore/components/organisms/overview.mdx
@@ -163,29 +163,7 @@ hideTOC: true
     actionPath="/docs/guides/faststore/organisms-product-grid"
     zoomOut
   >
-    <ProductGrid>
-      {products.map(({ product }, idx) => (
-        <ProductGridItem>
-          <ProductCard>
-            <ProductCardImage>
-              <img
-                data-fs-image
-                src={product.image[0].url}
-                alt={product.image[0].alternateName}
-              />
-            </ProductCardImage>
-            <ProductCardContent
-              title={product.isVariantOf.name}
-              price={{
-                value: product.offers.offers[0].price,
-                listPrice: product.offers.offers[0].listPrice,
-                formatter: useFormattedPrice,
-              }}
-            />
-          </ProductCard>
-        </ProductGridItem>
-      ))}
-    </ProductGrid>
+    <ProductGridUsage />
   </CardItem>
   <CardItem
     title="Product Shelf"
