--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -713,28 +713,6 @@ Displays a list of products to be used as a section on the store."
 It's a section generally used on PLP pages to list the products available in the store."
     actionPath="/docs/guides/faststore/organisms-product-grid"
   >
-    <ProductGrid>
-      {products.map(({ product }, idx) => (
-        <ProductGridItem>
-          <ProductCard>
-            <ProductCardImage>
-              <img
-                data-fs-image
-                src={product.image[0].url}
-                alt={product.image[0].alternateName}
-              />
-            </ProductCardImage>
-            <ProductCardContent
-              title={product.isVariantOf.name}
-              price={{
-                value: product.offers.offers[0].price,
-                listPrice: product.offers.offers[0].listPrice,
-                formatter: useFormattedPrice,
-              }}
-            />
-          </ProductCard>
-        </ProductGridItem>
-      ))}
-    </ProductGrid>
+    <ProductGridUsage />
   </SectionItem>
 </SectionList>
