--- a/docs/faststore/components/organisms/slide-over.mdx
+++ b/docs/faststore/components/organisms/slide-over.mdx
@@ -211,7 +211,7 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
 
 ## Related components
 
-<SectionList grid="row" columns={2}>
+<Flex>
   <SectionItem
     title="Cart Sidebar"
     description="The CartSidebar displays the summary of items added to the cart along with detailed information, and checkout option."
@@ -232,4 +232,4 @@ Follow the instructions in the [Importing FastStore UI component styles](https:/
       </SearchProvider>
     </UIProvider>
   </SectionItem>
-</SectionList>
+</Flex>
