--- a/docs/faststore/components/features/search.mdx
+++ b/docs/faststore/components/features/search.mdx
@@ -40,7 +40,7 @@ To integrate the `<SearchInput />` component, refer to the provided example in t
   </SectionItem>
   <SectionItem
     title="Search Top"
-    description="This section displays the most searched terms by customers."
+    description="Displays the most searched terms by customers."
     actionPath="/docs/guides/faststore/molecules-search-top"
   >
     <SearchTop title="Top Search">
@@ -59,7 +59,7 @@ To integrate the `<SearchInput />` component, refer to the provided example in t
   </SectionItem>
   <SectionItem
     title="Search Auto Complete"
-    description="List of auto completing suggestions based on searched term."
+    description="List of auto completing suggestions based on the searched term."
     actionPath="/docs/guides/faststore/molecules-search-auto-complete"
   >
     <SearchAutoComplete>
@@ -75,7 +75,7 @@ To integrate the `<SearchInput />` component, refer to the provided example in t
   </SectionItem>
   <SectionItem
     title="Search Products"
-    description="List of SearchProductItem to show details of the suggested products."
+    description="List of `SearchProductItem` to show details of the suggested products."
     actionPath="/docs/guides/faststore/molecules-search-products"
   >
     <SearchProducts>
@@ -117,7 +117,7 @@ To integrate the `<SearchInput />` component, refer to the provided example in t
   </SectionItem>
   <SectionItem
     title="Search Dropdown"
-    description="Combine SearchHistory, SearchTop and SearchAutoComplete and SearchProducts to show all options in SearchInput."
+    description="Combine `SearchHistory`, `SearchTop` `SearchAutoComplete` and `SearchProducts` to show all options in `SearchInput`."
     actionPath="/docs/guides/faststore/molecules-search-dropdown"
     containerStyle={{
       alignItems: 'start',
@@ -127,14 +127,14 @@ To integrate the `<SearchInput />` component, refer to the provided example in t
   </SectionItem>
   <SectionItem
     title="Search Input Field"
-    description="An InputField with a search button."
+    description="An `InputField` with a search button."
     actionPath="/docs/guides/faststore/molecules-search-input-field"
   >
     <SearchInputField onSubmit={() => {}} />
   </SectionItem>
   <SectionItem
     title="Search Input"
-    description="The SearchInput is responsible to receive, search and display suggestions."
+    description="The `SearchInput` is responsible for receiving, searching and displaying suggestions."
     actionPath="/docs/guides/faststore/organisms-search-input"
     containerStyle={{
       alignItems: 'start',
