--- a/docs/faststore/components/index.mdx
+++ b/docs/faststore/components/index.mdx
@@ -200,23 +200,14 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Checkbox Field"
-    description={
-      <>
-        Wraps a <code>Checkbox</code> input and its corresponding{' '}
-        <code>Label</code>. It allows users to select one option from a set.
-      </>
-    }
+    description="Wraps a `Checkbox` input and its corresponding `Label`. It allows users to select one option from a set."
     actionPath="/docs/guides/faststore/molecules-checkbox-field"
   >
     <CheckboxField label="Default" id="checkboxfield-default" />
   </CardItem>
   <CardItem
     title="Discount Badge"
-    description={
-      <>
-        A custom <code>Badge</code> that display product's discounts.
-      </>
-    }
+    description="A custom `Badge` that display product's discounts."
     actionPath="/docs/guides/faststore/molecules-discount-badge"
   >
     <DiscountBadge listPrice={80} spotPrice={40} />
@@ -269,23 +260,14 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Input Field"
-    description={
-      <>
-        Wraps an <code>Input</code> and its corresponding <code>Label</code>.
-      </>
-    }
+    description="Wraps an `Input` and its corresponding `Label`."
     actionPath="/docs/guides/faststore/molecules-input-field"
   >
     <InputField label="Input w/ Action" id="inputfield-action" actionable />
   </CardItem>
   <CardItem
     title="Link Button"
-    description={
-      <>
-        Visuallly replicates a <code>Button</code>, however acts as a link to
-        navigate users between pages.
-      </>
-    }
+    description="Visuallly replicates a `Button`, however acts as a link to navigate users between pages."
     actionPath="/docs/guides/faststore/molecules-link-button"
   >
     <LinkButton href="#">Link Button</LinkButton>
@@ -376,12 +358,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Radio Field"
-    description={
-      <>
-        Wraps a <code>Radio</code> input and its corresponding{' '}
-        <code>Label</code>. It allows users to select one option from a set.
-      </>
-    }
+    description="Wraps a `Radio` input and its corresponding `Label`. It allows users to select one option from a set."
     actionPath="/docs/guides/faststore/molecules-radio-field"
   >
     <RadioField label="Checked" id="radiofield-checked" checked readOnly />
@@ -406,24 +383,14 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Region Bar"
-    description={
-      <>
-        Trigger the <code>RegionModal</code> and is part of{' '}
-        <code>Regionalization</code> feature.
-      </>
-    }
+    description="Trigger the `RegionModal` and is part of `Regionalization` feature."
     actionPath="/docs/guides/faststore/molecules-region-bar"
   >
     <RegionBar icon={<Icon name="MapPin" />} label="Set your location" />
   </CardItem>
   <CardItem
     title="Search Auto Complete"
-    description={
-      <>
-        Lists auto completing suggestions based on searched term. This component
-        is part of the <code>Search</code> feature.
-      </>
-    }
+    description="Lists auto completing suggestions based on searched term. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-auto-complete"
   >
     <SearchAutoComplete>
@@ -439,13 +406,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Search Dropdown"
-    description={
-      <>
-        Combines all <code>Search</code> components to show all options in{' '}
-        <code>SearchInput</code>. This component is part of the{' '}
-        <code>Search</code> feature.
-      </>
-    }
+    description="Combines all `Search` components to show all options in `SearchInput`. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-dropdown"
     zoomOut
   >
@@ -453,12 +414,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Search History"
-    description={
-      <>
-        Responsible for showing the latest terms searched by a user. This
-        component is part of the <code>Search</code> feature.
-      </>
-    }
+    description="Responsible for showing the latest terms searched by a user. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-history"
   >
     <SearchHistory title="History">
@@ -469,24 +425,14 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Search Input Field"
-    description={
-      <>
-        An <code>InputField</code> with a search button. This component is part
-        of the <code>Search</code> feature.
-      </>
-    }
+    description="An `InputField` with a search button. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-input-field"
   >
     <SearchInputField onSubmit={() => {}} />
   </CardItem>
   <CardItem
     title="Search Products"
-    description={
-      <>
-        Shows details of the suggested products. This component is part of the{' '}
-        <code>Search</code> feature.
-      </>
-    }
+    description="Shows details of the suggested products. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-products"
   >
     <SearchProducts>
@@ -528,12 +474,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Search Top"
-    description={
-      <>
-        Displays the most searched terms by customers. This component is part of
-        the <code>Search</code> feature.
-      </>
-    }
+    description="Displays the most searched terms by customers. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-top"
   >
     <SearchTop title="Top Search">
@@ -552,12 +493,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Select Field"
-    description={
-      <>
-        Wraps a <code>Select</code> input and its corresponding{' '}
-        <code>Label</code>. It allows users to select one option from a set.
-      </>
-    }
+    description="Wraps a `Select` input and its corresponding `Label`. It allows users to select one option from a set."
     actionPath="/docs/guides/faststore/molecules-select-field"
   >
     <SelectField
@@ -609,12 +545,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Tag"
-    description={
-      <>
-        Are an interactive <code>Badge</code>. By default, its have a close
-        button.
-      </>
-    }
+    description="Are an interactive `Badge`. By default, its have a close button."
     actionPath="/docs/guides/faststore/molecules-tag"
   >
     <Tag variant="highlighted" label="Tag" onClose={() => {}} />
@@ -641,12 +572,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Toggle Field"
-    description={
-      <>
-        Toggle Field wraps a <code>Toggle</code> input and its corresponding{' '}
-        <code>Label</code>.
-      </>
-    }
+    description="Toggle Field wraps a `Toggle` input and its corresponding `Label`."
     actionPath="/docs/guides/faststore/molecules-toggle-field"
   >
     <ToggleField id="toggle-field-default" label="Label" />
@@ -711,11 +637,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Filter Slider"
-    description={
-      <>
-        The mobile <code>Filter</code> view that is rendered inside a <code>SlideOver</code> component.
-      </>
-    }
+    description="The mobile `Filter` view that is rendered inside a `SlideOver` component."
     actionPath="/docs/guides/faststore/organisms-filter-slider"
   >
     <UIProvider>
@@ -765,13 +687,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Navbar Slider"
-    description={
-      <>
-        As part of the <code>Navbar</code>, this component is its{' '}
-        <strong>mobile version</strong> used to list the navigation links
-        through the <code>NavbarLinks</code>.
-      </>
-    }
+    description="As part of the `Navbar`, this component is its **mobile version** used to list the navigation links through the `NavbarLinks`."
     actionPath="/docs/guides/faststore/organisms-navbar-slider"
   >
     <UIProvider>
@@ -801,12 +717,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Price Range"
-    description={
-      <>
-        <code>Slider</code> that allows users to select a maximum and minimum
-        price from a range.
-      </>
-    }
+    description="`Slider` that allows users to select a maximum and minimum price from a range."
     actionPath="/docs/guides/faststore/organisms-price-range"
   >
     <PriceRangeUsage />
@@ -829,12 +740,7 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Region Modal"
-    description={
-      <>
-        A <code>Modal</code> with some region configurations. The component is
-        part of <code>Regionalization</code> feature.
-      </>
-    }
+    description="A `Modal` with some region configurations. The component is part of `Regionalization` feature"
     actionPath="/docs/guides/faststore/organisms-region-modal"
   >
     <UIProvider>
@@ -843,24 +749,14 @@ Atomic Design breaks user interfaces hierarchically into smaller and simpler com
   </CardItem>
   <CardItem
     title="Search Input"
-    description={
-      <>
-        Responsible to receive, search and display suggestions. This component
-        is part of the <code>Search</code> feature.
-      </>
-    }
+    description="Responsible to receive, search and display suggestions. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/organisms-search-input"
   >
     <SearchInputUsage />
   </CardItem>
   <CardItem
     title="Shipping Simulation"
-    description={
-      <>
-        Lets customers set the <code>PostalCode</code> and see the shipping
-        options in the `PDP`.
-      </>
-    }
+    description="Lets customers set the `PostalCode` and see the shipping options in the `PDP`."
     actionPath="/docs/guides/faststore/organisms-shipping-simulation"
   >
     <ShippingSimulationUsage />
