--- a/docs/faststore/components/molecules/overview.mdx
+++ b/docs/faststore/components/molecules/overview.mdx
@@ -52,23 +52,14 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Checkbox Field"
-    description={
-      <>
-        Wraps a <code>Checkbox</code> input and its corresponding{' '}
-        <code>Label</code>. It allows users to select one option from a set.
-      </>
-    }
+    description="Wraps a `Checkbox` input and its corresponding `Label`. It allows users to select one option from a set."
     actionPath="/docs/guides/faststore/molecules-checkbox-field"
   >
     <CheckboxField label="Default" id="checkboxfield-default" />
   </CardItem>
   <CardItem
     title="Discount Badge"
-    description={
-      <>
-        A custom <code>Badge</code> that displays product's discounts.
-      </>
-    }
+    description="A custom `Badge` that displays product's discounts."
     actionPath="/docs/guides/faststore/molecules-discount-badge"
   >
     <DiscountBadge listPrice={80} spotPrice={40} />
@@ -121,23 +112,14 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Input Field"
-    description={
-      <>
-        Wraps an <code>Input</code> and its corresponding <code>Label</code>.
-      </>
-    }
+    description="Wraps an `Input` and its corresponding `Label`."
     actionPath="/docs/guides/faststore/molecules-input-field"
   >
     <InputField label="Input w/ Action" id="inputfield-action" actionable />
   </CardItem>
   <CardItem
     title="Link Button"
-    description={
-      <>
-        Visually replicates a <code>Button</code>, however acts as a link to
-        navigate users between pages.
-      </>
-    }
+    description="Visually replicates a `Button`, however acts as a link to navigate users between pages."
     actionPath="/docs/guides/faststore/molecules-link-button"
   >
     <LinkButton href="#">Link Button</LinkButton>
@@ -228,12 +210,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Radio Field"
-    description={
-      <>
-        Wraps a <code>Radio</code> input and its corresponding{' '}
-        <code>Label</code>. It allows users to select one option from a set.
-      </>
-    }
+    description="Wraps a `Radio` input and its corresponding `Label`. It allows users to select one option from a set."
     actionPath="/docs/guides/faststore/molecules-radio-field"
   >
     <RadioField label="Checked" id="radiofield-checked" checked readOnly />
@@ -258,24 +235,14 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Region Bar"
-    description={
-      <>
-        Trigger the <code>RegionModal</code> and is part of{' '}
-        <code>Regionalization</code> feature.
-      </>
-    }
+    description="Trigger the `RegionModal` and is part of `Regionalization` feature."
     actionPath="/docs/guides/faststore/molecules-region-bar"
   >
     <RegionBar icon={<Icon name="MapPin" />} label="Set your location" />
   </CardItem>
   <CardItem
     title="Search Auto Complete"
-    description={
-      <>
-        Lists auto-completing suggestions based on searched terms. This component
-        is part of the <code>Search</code> feature.
-      </>
-    }
+    description="Lists auto-completing suggestions based on searched terms. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-auto-complete"
   >
     <SearchAutoComplete>
@@ -291,13 +258,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Search Dropdown"
-    description={
-      <>
-        Combines all <code>Search</code> components to show all options in{' '}
-        <code>SearchInput</code>. This component is part of the{' '}
-        <code>Search</code> feature.
-      </>
-    }
+    description="Combines all `Search` components to show all options in `SearchInput`. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-dropdown"
     zoomOut
   >
@@ -305,12 +266,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Search History"
-    description={
-      <>
-        Responsible for showing the latest terms searched by a user. This
-        component is part of the <code>Search</code> feature.
-      </>
-    }
+    description="Responsible for showing the latest terms searched by a user. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-history"
   >
     <SearchHistory title="History">
@@ -321,24 +277,14 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Search Input Field"
-    description={
-      <>
-        An <code>InputField</code> with a search button. This component is part
-        of the <code>Search</code> feature.
-      </>
-    }
+    description="An `InputField` with a search button. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-input-field"
   >
     <SearchInputField onSubmit={() => {}} />
   </CardItem>
   <CardItem
     title="Search Products"
-    description={
-      <>
-        Shows details of the suggested products. This component is part of the{' '}
-        <code>Search</code> feature.
-      </>
-    }
+    description="Shows details of the suggested products. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-products"
   >
     <SearchProducts>
@@ -380,12 +326,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Search Top"
-    description={
-      <>
-        Displays the most searched terms by customers. This component is part of
-        the <code>Search</code> feature.
-      </>
-    }
+    description="Displays the most searched terms by customers. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/molecules-search-top"
   >
     <SearchTop title="Top Search">
@@ -404,12 +345,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Select Field"
-    description={
-      <>
-        Wraps a <code>Select</code> input and its corresponding{' '}
-        <code>Label</code>. It allows users to select one option from a set.
-      </>
-    }
+    description="Wraps a `Select` input and its corresponding `Label`. It allows users to select one option from a set."
     actionPath="/docs/guides/faststore/molecules-select-field"
   >
     <SelectField
@@ -461,12 +397,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Tag"
-    description={
-      <>
-        Are an interactive <code>Badge</code>. By default, its have a close
-        button.
-      </>
-    }
+    description="Are an interactive `Badge`. By default, its have a close button."
     actionPath="/docs/guides/faststore/molecules-tag"
   >
     <Tag variant="highlighted" label="Tag" onClose={() => {}} />
@@ -493,12 +424,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Toggle Field"
-    description={
-      <>
-        Toggle Field wraps a <code>Toggle</code> input and its corresponding{' '}
-        <code>Label</code>.
-      </>
-    }
+    description="Toggle Field wraps a `Toggle` input and its corresponding `Label`."
     actionPath="/docs/guides/faststore/molecules-toggle-field"
   >
     <ToggleField id="toggle-field-default" label="Label" />
