--- a/docs/faststore/components/organisms/overview.mdx
+++ b/docs/faststore/components/organisms/overview.mdx
@@ -57,11 +57,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Filter Slider"
-    description={
-      <>
-        The mobile <code>Filter</code> view that is rendered inside a <code>SlideOver</code> component.
-      </>
-    }
+    description="The mobile `Filter` view that is rendered inside a `SlideOver` component."
     actionPath="/docs/guides/faststore/organisms-filter-slider"
   >
     <UIProvider>
@@ -111,13 +107,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Navbar Slider"
-    description={
-      <>
-        As part of the <code>Navbar</code>, this component is its{' '}
-        <strong>mobile version</strong> used to list the navigation links
-        through the <code>NavbarLinks</code>.
-      </>
-    }
+    description="As part of the `Navbar`, this component is its **mobile version** used to list the navigation links through the `NavbarLinks`."
     actionPath="/docs/guides/faststore/organisms-navbar-slider"
   >
     <UIProvider>
@@ -147,12 +137,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Price Range"
-    description={
-      <>
-        <code>Slider</code> that allows users to select a maximum and minimum
-        price from a range.
-      </>
-    }
+    description="`Slider` that allows users to select a maximum and minimum price from a range."
     actionPath="/docs/guides/faststore/organisms-price-range"
   >
     <PriceRangeUsage />
@@ -175,12 +160,7 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Region Modal"
-    description={
-      <>
-        A <code>Modal</code> with some region configurations. The component is
-        part of <code>Regionalization</code> feature.
-      </>
-    }
+    description="A `Modal` with some region configurations. The component is part of `Regionalization` feature."
     actionPath="/docs/guides/faststore/organisms-region-modal"
   >
     <UIProvider>
@@ -189,24 +169,14 @@ hideTOC: true
   </CardItem>
   <CardItem
     title="Search Input"
-    description={
-      <>
-        Responsible to receive, search and display suggestions. This component
-        is part of the <code>Search</code> feature.
-      </>
-    }
+    description="Responsible to receive, search and display suggestions. This component is part of the `Search` feature."
     actionPath="/docs/guides/faststore/organisms-search-input"
   >
     <SearchInputUsage />
   </CardItem>
   <CardItem
     title="Shipping Simulation"
-    description={
-      <>
-        Lets customers set the <code>PostalCode</code> and see the shipping
-        options in the `PDP`.
-      </>
-    }
+    description="Lets customers set the `PostalCode` and see the shipping options in the `PDP`."
     actionPath="/docs/guides/faststore/organisms-shipping-simulation"
   >
     <ShippingSimulationUsage />
