--- a/docs/faststore/components/organisms/product-shelf.mdx
+++ b/docs/faststore/components/organisms/product-shelf.mdx
@@ -264,7 +264,7 @@ You can use [ProductCard variants](https://developers.vtex.com/docs/guides/fasts
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <OverviewSection style={{ width: '80%', overflow: 'hidden', paddingLeft: '0', paddingRight: '0' }}>
+    <OverviewSection>
       <ProductShelfCarouselUsage/>
     </OverviewSection>
 
