--- a/docs/faststore/components/organisms/product-shelf.mdx
+++ b/docs/faststore/components/organisms/product-shelf.mdx
@@ -264,7 +264,7 @@ You can use [ProductCard variants](https://developers.vtex.com/docs/guides/fasts
 
 <Tabs items={['Example', 'Code']} defaultIndex="0">
   <Tab>
-    <OverviewSection containerStyle={{width: 80%}}>
+    <OverviewSection containerStyle={{width: "80%"}}>
       <ProductShelfCarouselUsage/>
     </OverviewSection>
 
