--- a/docs/faststore/components/molecules/product-card.mdx
+++ b/docs/faststore/components/molecules/product-card.mdx
@@ -698,7 +698,7 @@ Use the `ProductCard` to:
 
 ## Related components
 
-<SectionList>
+<SectionList grid="column">
   <SectionItem
     title="ProductShelf"
     description="
