--- a/docs/faststore/components/atoms/badge.mdx
+++ b/docs/faststore/components/atoms/badge.mdx
@@ -378,8 +378,7 @@ For further customization, you can use the following data attributes:
 <SectionList>
   <SectionItem
     title="DiscountBadge"
-    description="
-DiscountBadge is a Badge used to show product discounts."
+    description="`DiscountBadge` is a badge used to show product discounts."
     actionPath="/docs/guides/faststore/molecules-discount-badge"
   >
     <DiscountBadge listPrice={80} spotPrice={40} />
