--- a/docs/faststore/components/atoms/checkbox.mdx
+++ b/docs/faststore/components/atoms/checkbox.mdx
@@ -223,7 +223,7 @@ For further customization, you can use the following data attributes:
 <SectionList>
   <SectionItem
     title="CheckboxField"
-    description="CheckboxField wraps a Checkbox input and its corresponding Label."
+    description="`CheckboxField` wraps a `Checkbox` input and its corresponding `Label`."
     actionPath="/docs/guides/faststore/molecules-checkbox-field"
   >
     <CheckboxField label="CheckboxField" id="checkboxfield" checked readOnly />
