--- a/docs/faststore/docs/reference/global-tokens/overview.mdx
+++ b/docs/faststore/docs/reference/global-tokens/overview.mdx
@@ -1,8 +1,5 @@
 ---
-title: ' Overview'
-sidebar_label: 'Global Tokens'
-layout: 'full'
-slug: global-tokens-overview
+title: ' Global Tokens'
 ---
 
 **Design tokens** are parameters that affect all UI look 'n' feel and they are the **main configuration** file of a Theme. Component-specific tokens often inherit from global tokens but are named specifically to apply those tokens in component development.
